<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Random Word Generator</string>
    <string name="app_header">Your Generated Words</string>
    <string name="app_long_desc"><![CDATA[The inspiration for this app was xkcd\'s comic
        <a href="https://m.xkcd.com/936/">"Password Strength"</a>, and by
        <a href="http://world.std.com/~reinhold/diceware.html">Diceware</a>.<br><br>
        By using a large word list with over 28,000 entries, a randomly selected word will
        have nearly 14.8 bits of entropy. A phrase made up of 6 words will have over 88.6
        bits of entropy, more than enough for a very strong password.<br><br>
        This app uses multiple word lists from different sources. The random number generator
        uses the cryptographically secure java.security.SecureRandom class.
        ]]></string>
    <string name="app_url">https://github.com/staceybellerose/RandomWordGenerator/blob/%s/README.md</string>

    <string name="sample_words">
        lorem
        \nipsum
        \ndolor
        \nsit
        \namet
        \nconsectetur
        \nadipiscing
        \nelit
        \ncras
        \neuismod
        \nconsequat
        \nfelis</string>
    <string name="downloadable_content">Downloadable content coming soon!</string>
    <string name="copied">Word list copied to clipboard</string>

    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_changelog">Change Log</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_word_lists">Word Lists</string>
    <string name="title_activity_word_list_info">Word Lists</string>
    <string name="title_activity_sources">Word List Sources</string>
    <string name="title_tour_help">Show Help</string>
    <string name="header_libraries">Third Party Libraries</string>

    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh Words</string>
    <string name="action_about">About</string>
    <string name="action_changelog">Change Log</string>
    <string name="action_wordlists">Word Lists</string>
    <string name="action_list_filter">Language</string>
    <string name="action_list_help">Help</string>
    <string name="action_github">View Source on GitHub</string>
    <string name="button_show_sources">Show Sources</string>

    <string name="changelog_row_bullet">\u25cf</string>

    <string name="tour_clipboard_primary">Copy to Clipboard</string>
    <string name="tour_clipboard_secondary">Tap the button to copy your word list to the clipboard</string>
    <string name="tour_refresh_primary">Pull to Refresh</string>
    <string name="tour_refresh_secondary">To generate a new set of words, swipe down to refresh.</string>
    <string name="tour_wordlist_primary">Easily Change Word Lists</string>
    <string name="tour_wordlist_secondary">Tap the header to change the word list used to generate the random words.</string>

    <string name="word_list_help_title">Help</string>
    <string name="word_list_help_text">To select a word list for use, simply tap on the one you wish to use.
        The currently selected word list will show a ❤ symbol in the upper right corner of its information card.
        \n\nTo see only those lists of a certain language, use the drop down list in the top bar to select a language.
    </string>
    <string name="sources_description">The word lists included in this app have been collected
        from a variety of sources.</string>

    <string name="word_list_title">Selected Word List</string>
    <string name="details_language">Language</string>
    <string name="details_source">Source</string>
    <string name="details_count">Word Count</string>
    <string name="details_entropy">Entropy</string>
    <string name="label_entropy">%1$1.1f bits per word</string>

    <!-- Settings definitions -->
    <string name="pref_display_count">DISPLAY_COUNT</string>
    <string name="pref_min_word_length">MIN_WORD_LENGTH</string>
    <string name="pref_max_word_length">MAX_WORD_LENGTH</string>
    <string name="pref_unlimited_length_flag">UNLIMITED_LENGTH_FLAG</string>
    <string name="pref_clean_words_flag">CLEAN_WORDS_FLAG</string>
    <string name="pref_word_list">WORD_LIST</string>
    <string name="pref_word_list_changed">WORD_LIST_CHANGED</string>
    <string name="pref_clean_filter_changed">CLEAN_FILTER_CHANGED</string>
    <string name="pref_two_column">TWO_COLUMN</string>
    <string name="pref_search_language">LANGUAGE</string>

    <bool name="pref_clean_words_default">false</bool>
    <bool name="pref_two_column_default">true</bool>

    <!-- Preferences strings -->
    <string name="pref_word_list_header">Word List</string>
    <string name="pref_word_list_default">wordlist</string>
    <string name="pref_word_list_download">download</string>
    <string name="pref_display_header">Display</string>
    <string name="pref_display_count_title">Number of random words</string>
    <string name="pref_filters_header">Filters</string>
    <string name="pref_clean_words_title">Hide vulgar words?</string>
    <string name="pref_unlimited_words_title">Unrestricted word length</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="pref_min_word_length_title">Minimum Word Length</string>
    <string name="pref_max_word_length_title">Maximum Word Length</string>
    <string name="pref_manage_downloads_title">Manage Downloads</string>
    <string name="pref_two_column_title">Two Column Display</string>

    <plurals name="pref_display_count_summary">
        <item quantity="one">%d word will be displayed</item>
        <item quantity="other">%d words will be displayed</item>
    </plurals>

    <!-- AboutLibraries extra definitions -->
    <string name="define_int_gradle_retrolambda">year;owner</string>
    <string name="library_gradle_retrolambda_owner">Evan Tatarka</string>
    <string name="library_gradle_retrolambda_year">2013</string>

    <string name="define_int_LeakCanary">year;owner</string>
    <string name="library_LeakCanary_owner">Square, Inc.</string>
    <string name="library_LeakCanary_year">2015</string>

    <string name="define_int_retrolambda">year;owner</string>
    <string name="library_retrolambda_owner">Esko Luontola</string>
    <string name="library_retrolambda_year">2013</string>

    <string name="define_int_rxandroid">year;owner</string>
    <string name="library_rxandroid_owner">The RxAndroid authors</string>
    <string name="library_rxandroid_year">2015</string>

    <string name="define_int_rxjava">year;owner</string>
    <string name="library_rxjava_owner">RxJava Contributors</string>
    <string name="library_rxjava_year">2016-present</string>

    <string name="define_int_appcompat_v7">owner</string>
    <string name="library_appcompat_v7_owner">AOSP</string>

    <string name="define_int_design">owner</string>
    <string name="library_design_owner">AOSP</string>

    <string name="define_int_recyclerview_v7">owner</string>
    <string name="library_recyclerview_v7_owner">AOSP</string>

    <string name="define_int_support_v4">owner</string>
    <string name="library_support_v4_owner">AOSP</string>

    <string name="leak_canary_display_activity_label">Random Word Generator Leaks</string>

</resources>
