<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.staceybellerose.randomwordgenerator.MainActivity">
    <!-- TODO re-enable when Settings Activity created -->
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_menu_settings"
        android:title="@string/action_settings"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_changelog"
        android:title="@string/action_changelog"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_help"
        android:title="@string/title_tour_help"
        app:showAsAction="never" />
</menu>
