<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 xmlns:tools="http://schemas.android.com/tools"
                                                 android:id="@+id/coordinator_layout"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 android:fitsSystemWindows="true"
                                                 tools:context="com.staceybellerose.randomwordgenerator.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/app_name"/>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swiperefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/AppTheme.TextAppearance.Header.Tight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/word_list_title"/>

                <TextView
                    android:id="@+id/word_list_title"
                    style="@style/AppTheme.TextAppearance.Body"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="American English Dictionary (no Inflections)"/>

                <TextView
                    style="@style/AppTheme.TextAppearance.Header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_header"/>

                <TextView
                    android:id="@+id/random_content"
                    style="@style/AppTheme.TextAppearance.Subhead"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHighlight="@color/selected_text"
                    android:textIsSelectable="true"
                    tools:text="@string/sample_words"/>
            </LinearLayout>
        </ScrollView>

    </android.support.v4.widget.SwipeRefreshLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_content_copy_white_48dp"/>

</android.support.design.widget.CoordinatorLayout>
