<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    xmlns:app="http://schemas.android.com/apk/res-auto"
                                    xmlns:tools="http://schemas.android.com/tools"
                                    android:id="@+id/card_view"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginBottom="16dp"
                                    android:layout_marginEnd="24dp"
                                    android:layout_marginLeft="16dp"
                                    android:layout_marginRight="24dp"
                                    android:layout_marginStart="16dp"
                                    android:foreground="?selectableItemBackground"
                                    app:cardBackgroundColor="@color/card_background">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/word_list_name"
            style="@style/AppTheme.TextAppearance.Header.Tight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:drawablePadding="0dp"
            android:paddingBottom="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:drawableEnd="@drawable/ic_favorite_green_500_36dp"
            tools:drawableRight="@drawable/ic_favorite_green_500_36dp"
            tools:text="Some Word List"/>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/colorAccentLight"
            app:layout_constraintLeft_toLeftOf="@+id/word_list_name"
            app:layout_constraintRight_toRightOf="@+id/word_list_name"
            app:layout_constraintTop_toBottomOf="@+id/word_list_name"/>

        <TextView
            android:id="@+id/language_label"
            style="@style/AppTheme.TextAppearance.Subhead.Tight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/details_language"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintHorizontal_weight="40"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/language_text"
            app:layout_constraintTop_toBottomOf="@+id/word_list_name"/>

        <TextView
            android:id="@+id/language_text"
            style="@style/AppTheme.TextAppearance.Body.Tight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/language_label"
            app:layout_constraintHorizontal_weight="60"
            app:layout_constraintLeft_toRightOf="@+id/language_label"
            app:layout_constraintRight_toRightOf="parent"
            tools:text="English"/>

        <TextView
            android:id="@+id/count_label"
            style="@style/AppTheme.TextAppearance.Subhead.Tight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/details_count"
            app:layout_constraintHorizontal_weight="40"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/count_text"
            app:layout_constraintTop_toBottomOf="@+id/language_label"/>

        <TextView
            android:id="@+id/count_text"
            style="@style/AppTheme.TextAppearance.Body.Tight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/count_label"
            app:layout_constraintHorizontal_weight="60"
            app:layout_constraintLeft_toRightOf="@+id/count_label"
            app:layout_constraintRight_toRightOf="parent"
            tools:text="23456"/>

        <TextView
            android:id="@+id/entropy_label"
            style="@style/AppTheme.TextAppearance.Subhead.Tight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/details_entropy"
            app:layout_constraintHorizontal_weight="40"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/entropy_text"
            app:layout_constraintTop_toBottomOf="@+id/count_label"/>

        <TextView
            android:id="@+id/entropy_text"
            style="@style/AppTheme.TextAppearance.Body.Tight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/entropy_label"
            app:layout_constraintBottom_toBottomOf="@+id/entropy_label"
            app:layout_constraintHorizontal_weight="60"
            app:layout_constraintLeft_toRightOf="@+id/entropy_label"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/entropy_label"
            tools:text="14.5 bits per word"/>

        <TextView
            android:id="@+id/source_label"
            style="@style/AppTheme.TextAppearance.Subhead.Tight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:paddingBottom="16dp"
            android:text="@string/details_source"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintHorizontal_weight="40"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/source_text"
            app:layout_constraintTop_toBottomOf="@+id/entropy_text"/>

        <TextView
            android:id="@+id/source_text"
            style="@style/AppTheme.TextAppearance.Body.Tight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/source_label"
            app:layout_constraintHorizontal_weight="60"
            app:layout_constraintLeft_toRightOf="@+id/source_label"
            app:layout_constraintRight_toRightOf="parent"
            tools:text="12dicts"/>

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>